# data-science-team-agno

./: .gitignore  dummy_regression.py  memory.db  pyproject.toml
.history/: .env_20260104131023  .env_20260104133023  .env_20260104174356  .env_20260105195250  .env_20260105203528  .gitignore_20260105204408  .gitignore_20260105204430  app_20260104130747.py  app_20260104130752.py  app_20260104130753.py  app_20260104130802.py  app_20260104130803.py  app_20260104130840.py  app_20260104130846.py  app_20260104130850.py  app_20260104130930.py  app_20260104130931.py  app_20260104130935.py  app_20260104130939.py  app_20260104130943.py  app_20260104130944.py  app_20260104130948.py  app_20260104130951.py  app_20260104130952.py  app_20260104131002.py  app_20260104131005.py  app_20260104131008.py  app_20260104131009.py  app_20260104131011.py  app_20260104131105.py  app_20260104131114.py  app_20260104131123.py  app_20260104131126.py  app_20260104131137.py  app_20260104131139.py  app_20260104131201.py  app_20260104131205.py  app_20260104131216.py  app_20260104131222.py  app_20260104131230.py  (+150 more)
